fix the bold text layout shift

--- a/src/renderer/pages/home/tabs/tabs.module.css
+++ b/src/renderer/pages/home/tabs/tabs.module.css
@@ -37,36 +37,21 @@
   padding: 0 20px;
   margin: 0;
   padding-top: 10px;
-  opacity: 0.6;
   flex-shrink: 0;
   white-space: nowrap;
+  opacity: 0.7;
 }
 
 .trigger[data-active],
 .trigger:focus {
   cursor: default;
-  opacity: 0.9;
   font-weight: 500;
+  opacity: 1;
   border-bottom: solid 2px var(--purple-lighter);
 }
 
 .trigger:hover:not(:focus) {
-  opacity: 0.8;
   border-bottom: solid 2px rgb(255 255 255 / 80%);
-}
-
-/* This is a trick to prevent the trigger's text from shifting all the tabs when switching
- * from regular font weight to a bolded font weight. We create a hidden element which has
- * the same text as the trigger, with the same style, but it's not visible. This way,
- * the trigger's text will always have the same width, regardless of its font weight.
- */
-.trigger::after {
-  content: attr(data-label);
-  font-weight: 500;
-  visibility: hidden;
-  display: block;
-  height: 0;
-  overflow: hidden;
 }
 
 .labelRow {
@@ -75,12 +60,31 @@
   gap: 10px;
 }
 
+.label {
+  display: inline-flex;
+  flex-direction: column;
+  color: var(--off-white);
+}
+
+/* This is a trick to prevent the trigger's text from shifting all the tabs when switching
+ * from regular font weight to a bolded font weight. We create a hidden element which has
+ * the same text as the trigger, with the same style, but it's not visible. This way,
+ * the trigger's text will always have the same width, regardless of its font weight.
+ */
+.label::after {
+  content: attr(data-label);
+  font-weight: 500;
+  visibility: hidden;
+  height: 0;
+  overflow: hidden;
+}
+
 .dot {
   display: inline-block;
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background-color: white;
+  background-color: var(--off-white);
   flex-shrink: 0;
 }
 
